# vteditor

./: .gitmodules  README.md  meson.build  org.bsoldiers.vte.json
data/: meson.build  org.bsoldiers.vte.desktop.in  org.bsoldiers.vte.gschema.xml  org.bsoldiers.vte.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  vteditor-application.c  vteditor-application.h  vteditor-window.c  vteditor-window.h  vteditor-window.ui  vteditor.gresource.xml
